# game-template

./: .gitmodules  CMakeLists.txt  README.md
shaders/: sprite.fs  sprite.vs  text.fs
src/: CMakeLists.txt  game.cpp  game.hpp  game_object.cpp  game_object.hpp  logger.cpp  logger.hpp  main.cpp  platform.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  utils.hpp
